--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,1 +1,33 @@
-<p>cart works!</p>
+<ng-container *ngIf="products.length != 0">
+    <div class="card-table">
+        <div class="cart-product">
+            <table class="table table-responsive">
+                <tbody>
+                    <tr *ngFor="let item of products">
+                        <td><img src="{{item.image}}" alt="" id="itemImage"></td>
+                        <td>{{item.title}}</td>
+                        <td><p style="font-size: x-large;"><strong>${{item.price}}</strong></p></td>
+                        <td>{{item.quantity}}</td>
+                        <td>{{item.total}}</td>
+                        <td>
+                            <button (click)="removeItem(item)" class="btn btn-danger"><i class="bi bi-x-circle-fill"></i></button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</ng-container>
+
+
+<ng-container *ngIf="products.length == 0">
+    <div class="container">
+        <div class="card">
+            <h4 class="card-title">Cart</h4>
+        </div>
+        <div class="center">
+            <img src="assets/empty_cart.png" alt="" draggable="false" id="emptyCartImage">
+            <button class="btn btn-primary">Shop Now!</button>
+        </div>
+    </div>
+</ng-container>
