--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -9,7 +9,7 @@
                 <img src="{{item.image}}" alt="" draggable="false">
                 <h5 style="white-space:nowrap; overflow:hidden; text-overflow:ellipsis; max-width:100ch">{{item.title}}</h5>
                 <p style="font-size: x-large;"><strong>${{item.price}}</strong></p>
-                <button class="btn btn-primary">Add to Cart</button>
+                <button class="btn btn-primary"(click)="addtocart(item)">Add to Cart</button>
             </div>
         </ng-container>
     </div>
