change website style

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -2,6 +2,7 @@
     <div class="card-table">
         <div class="cart-product">
             <table class="table table-responsive">
+                <h1>Cart</h1>
                 <tbody>
                     <tr *ngFor="let item of products">
                         <td><img src="{{item.image}}" alt="" id="itemImage"></td>
