--- a/src/app/cart/cart.component.css
+++ b/src/app/cart/cart.component.css
@@ -35,7 +35,6 @@
     width: 10%;
     display: flex;
     margin-top: 0;
-    top: 90%;
     position: relative;
     flex-direction: column;
     left: 68%;
@@ -44,6 +43,10 @@
 .emptycart{
     position: relative;
     left: 17%;
+}
+
+h1{
+    font-size: 2rem;
 }
 
 .buttons p{
