--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,26 +1,40 @@
-.form-control{
-    border-radius: 10px;
-    width: 600px;
-    margin-left: 28px;
-    margin-top: 5px;
-}
-
-.logo{
-    user-select: none;
-
-}
-
-header{
-    background-color: rgb(235, 146, 14);
-    height: 60px;
+.header{
+    top: 0; left: 0; right: 0;
+    z-index: 1000;
     display: flex;
     align-items: center;
-}
-.cart-button{
-    position: absolute;
-    right: 2rem;
+    justify-content: space-between;
+    padding: 2rem 2%;
 }
 
-.cart-button:hover,.logo:hover{
-    cursor: pointer;
+.header.active{
+    background: #040608;
+    padding: 2rem 9%;
+    box-shadow: var(--box-shadow);
 }
+
+.header a:link{
+    text-decoration: none;
+}
+
+.header .logo{
+    font-size: 2rem;
+    font-weight: bolder;
+    color: black;
+}
+
+.header .logo i{
+    padding-right: .5rem;
+    color: black;
+}
+
+.header .navbar a{
+    list-style-type: none;
+    font-size: 1.6rem;
+    color: black;
+    margin: 0 1rem;
+}
+.header .navbar a:link{
+    text-decoration: none;
+}
+
