--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,3 +1,12 @@
+<section class="home" id="home">
+
+    <div class="content">
+        <h3><i class="fas fa-shop"></i> shopnow</h3>
+        <p>Top #1 in the world in quality</p>
+    </div>
+
+</section>
+
 <div class="card-top container-fluid">
 
 </div>
