--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,19 @@
-/* You can add global styles to this file, and also import other style files */
-body{
-    background-color: rgb(226, 222, 222);
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500&display=swap");
+
+:root{
+    --primary:#de4f61;
+    --white: #fff;
+    --box-shadow:0 .5rem 1rem rgba(0,0,0,.1);
+}
+
+*{
+    
+    font-family: 'Nunito', sans-serif;
+    margin: 0; padding: 0;
+    box-sizing: border-box;
+    outline: none; border: none;
+    text-decoration: none;
+    text-transform: capitalize;
+    list-style: none;
+    transition: .2s linear;
 }
