--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -15,6 +15,11 @@
                 </tbody>
             </table>
             <button class="btn btn-danger emptycart" (click)="emptyCart()">Empty Cart</button>
+            <div class="content_account">
+                demoaccount32@gmail.com
+                <br>
+                demoaccount123
+            </div>
             <div class="buttons">
                 <h4>Total</h4>
                 <strong>${{total}}</strong>
