--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -10,7 +10,7 @@
 <div class="card-top container-fluid">
 
 </div>
-
+<h1>Most Viewed</h1>
 <div class="container">
     <div class="row">
         <ng-container *ngFor ="let item of products">
