--- a/src/app/product/product.component.css
+++ b/src/app/product/product.component.css
@@ -12,6 +12,11 @@
     max-width: 55rem;
 }
 
+h1{
+    margin-top: 10rem;
+    margin-left: 6.5rem;
+}
+
 .home .content h3{
     position: absolute;
     top: 30%;
